Localisation ACE + trad Maj

--- a/3362815204/localisation/ACE_Cannor_misc_loc_l_english.yml
+++ b/3362815204/localisation/ACE_Cannor_misc_loc_l_english.yml
@@ -6,41 +6,41 @@ dragon_coast.1.desc: "(Placeholder) The Dragon Coast has long been disputed terr
 dragon_coast.1.a: "The Kobolds have a divine right!"
 dragon_coast.1.b: "The Gnomes were here before anyone else, a thousand years ago!"
 dragon_coast.1.c: "Mediate between the two sides"
-dragon_coast.2.t: "Revitalizing the Dragon Coast"
-dragon_coast.2.desc: "(Placeholder) We have resolved to revitalize the Dragon Coast, now comes the business of deciding on where..."
-dragon_coast.2.a: "Revitalize Iochand"
-dragon_coast.2.b: "Revitalize Reaver Coast"
-dragon_coast.2.c: "Revitalize Gnomish Pass"
-dragon_coast.2.d: "Revitalize Dragonhills"
-dragon_coast.2.e: "Revitalize Dragondowns"
-dragon_coast.2.f: "Revitalize Dragonpoint"
-dragon_coast.2.g: "Revitalize Storm Isles"
-dragon_coast.2.h: "Revitalize Dragonspine"
-dragon_coast.2.i: "Revitalize Dragonheights"
-dragon_coast.2.j: "Revitalize Dragonmaw"
-dragon_coast.2.k: "Revitalize Dragonheart"
-dragon_coast.2.l: "Revitalize Dragondepths"
-dragon_coast.4.t: "Rewards of Revitalization"
+dragon_coast.2.t: "Revitalising the Dragon Coast"
+dragon_coast.2.desc: "The Dragon Coast is a region rife with potential. Even after the chaos of the Dragonwake heralded almost a millennium of strife between its various inhabitants, there is still a veritable bounty to be uncovered; from the fertile plains of the Dragondowns to the mineral-rich Dragonheights, one need only be willing to put in the effort to restore the land. We have resolved to provide that effort, now we must determine where to direct it."
+dragon_coast.2.a: "Revitalise Iochand"
+dragon_coast.2.b: "Revitalise Reaver Coast"
+dragon_coast.2.c: "Revitalise Gnomish Pass"
+dragon_coast.2.d: "Revitalise Dragonhills"
+dragon_coast.2.e: "Revitalise Dragondowns"
+dragon_coast.2.f: "Revitalise Dragonpoint"
+dragon_coast.2.g: "Revitalise Storm Isles"
+dragon_coast.2.h: "Revitalise Dragonspine"
+dragon_coast.2.i: "Revitalise Dragonheights"
+dragon_coast.2.j: "Revitalise Dragonmaw"
+dragon_coast.2.k: "Revitalise Dragonheart"
+dragon_coast.2.l: "Revitalise Dragondepths"
+dragon_coast.4.t: "Rewards of Revitalisation"
 dragon_coast.4.desc: "Placeholder"
 dragon_coast.4.a: "The Kobolds will improve this area"
 dragon_coast.4.b: "The Gnomes will improve this area"
 dragon_coast.6.t: "An Offer of Cooperation"
-dragon_coast.6.desc: "(Placeholder) With the successful conclusion of the Dragon Coast Revitalization Project, and our own participation in the affair, we have been approached by some intrepid members of our chosen side. With the massively expanded infrastructure of the Dragon Coast, possibilities have opened up now which were not present before. They come with an offer: to become not just partners, but join administrations and allow them to serve in our government."
+dragon_coast.6.desc: "(Placeholder) With the successful conclusion of the Dragon Coast Revitalisation Project, and our own participation in the affair, we have been approached by some intrepid members of our chosen side. With the massively expanded infrastructure of the Dragon Coast, possibilities have opened up now which were not present before. They come with an offer: to become not just partners, but join administrations and allow them to serve in our government."
 dragon_coast.6.a: "We accept their offer, and will adopt their administration."
 dragon_coast.6.b: "We are glad to help, but will remain to govern ourselves."
 
 
 
 #Modifiers
-dragon_coast_sided_with_kobolds_mod: "Kobold Revitalization Project"
-desc_dragon_coast_sided_with_kobolds_mod: "[Root.Owner.GetName] is helping the Kobolds revitalize the Dragon Coast"
-dragon_coast_sided_with_gnomes_mod: "Gnomish Revitalization Project"
-desc_dragon_coast_sided_with_gnomes_mod: "[Root.Owner.GetName] is helping the Gnomes revitalize the Dragon Coast"
+dragon_coast_sided_with_kobolds_mod: "Kobold Revitalisation Project"
+desc_dragon_coast_sided_with_kobolds_mod: "[Root.Owner.GetName] is helping the Kobolds revitalise the Dragon Coast"
+dragon_coast_sided_with_gnomes_mod: "Gnomish Revitalisation Project"
+desc_dragon_coast_sided_with_gnomes_mod: "[Root.Owner.GetName] is helping the Gnomes revitalise the Dragon Coast"
 
 
 
 #Decisions
-dragon_coast_revitalization_title: "Dragon Coast Revitalization"
+dragon_coast_revitalization_title: "Dragon Coast Revitalisation"
 dragon_coast_revitalization_desc: "The hidden bounties of the Dragon Coast can be exploited profitably by all those who reside there. But whose inheritance shall we acknowledge?"
 
 
@@ -49,16 +49,20 @@ dragon_coast_revitalization_desc: "The hidden bounties of the Dragon Coast can b
 owns_dragon_coast_trigger_tt: "Any owned province:\n   Is in §YDragon Coast§! region"
 dragon_coast_side_kobolds_tt: "The Kobolds wish to bring their culture of earth-extraction and widespread building to the Dragon peninsula."
 dragon_coast_side_gnomes_tt: "The Gnomes wish to develop highly advanced industries and rely on conventional farms."
-dragon_coast_side_neither_tt: "We will be receive no help from either side, but we will be able to select which side's rewards we receive for each area we revitalize."
-dragon_coast_side_permanent_tt: "§TThis decision is permanent!§!\n\nFrom now until the end of the Dragon Coast Revitalization Project, every owned province in the §YDragon Coast§! region will receive:"
-dragon_coast_own_and_improve_area_tt: "£no£All provinces in area:\n   Owned by §Y[Root.GetName]§!\n   One of the following is true:\n      Improved §Y2§! times by owner\n      Province has §Y2§! buildings."
-
-
+dragon_coast_side_neither_tt: "We will be receive no help from either side, but we will be able to select which side's rewards we receive for each area we revitalise."
+dragon_coast_side_permanent_tt: "§TThis decision is permanent!§!\n\nFrom now until the end of the Dragon Coast Revitalisation Project, every owned province in the §YDragon Coast§! region will receive:"
+dragon_coast_own_and_improve_area_tt: "£no£All provinces in area:\n   Owned by §Y[Root.GetName]§!\n   One of the following is true:\n      Has §Y10§! development.\n      Province has §Y2§! buildings."
+escandar_unlock_arbarani_knights_tooltip: "Unlock the mercenary company §YKnights Magnificent§!"
+escandar_unlock_uelaire_marines_tooltip: "Unlock the mercenary company §YSons of the Sea§!"
+escandar_unlock_gnollcutters_tooltip: "Unlock the mercenary company §YGnollcutters§!"
+is_not_purging_or_expelling_gnollish_tt: "Is not Purging or Expelling Gnolls"
+is_not_purging_or_expelling_kobold_tt: "Is not Purging or Expelling Kobolds"
+is_not_purging_or_expelling_gnomish_tt: "Is not Purging or Expelling Gnomes"
 
 #Misc
-num_of_dragon_coast_areas_revitalized: "Number of Revitalized Areas in the Dragon Coast"
-dragon_coast_revitalization_done: "Dragon Coast Revitalization Complete"
-dragon_coast_revitalized: "Revitalization Project Successful"
+num_of_dragon_coast_areas_revitalized: "Number of Revitalised Areas in the Dragon Coast"
+dragon_coast_revitalization_done: "Dragon Coast Revitalisation Complete"
+dragon_coast_revitalized: "Revitalisation Project Successful"
 
 
 upgraded_nathalyne: "§dNathalyne§!"
@@ -89,6 +93,8 @@ ace_cannor_sorncell_shipyards: "Sorncell Shipyards"
 desc_ace_cannor_sorncell_shipyards: "The deepwater harbor of Sorncell has been the site of a major port and shipyard since before even the time of the Damerian Republic, and is still in use to this day. Renowned for its ability to accommodate ships of all shapes and sizes, and well-protected by a natural spit of land that prevents storms from damaging the port infrastructure, the harbor is still the prime naval trading hub of the Borders, and the twin industries of shipbuilding and maintenance provide ample employment for the citizens of Sorncell. Consequently, Sorncell remains an extremely important city for anyone wishing to project power - either military or mercantile - into the northern Divenhal."
 ace_cannor_ashfields_fertile: "Grey Wheat of Ashfield"
 ace_cannor_ashfields_fertile_desc: "During the Day of Ashen Skies the Havoral Mountain erupted and spewed ash across the modern-day Borders and consequently covered what is known as Ashfield in ash. Shortly after this event a strange phenomena occurred in the surrounding area, where crops would grow at an increased rate - most notably the wheat. This Ashwheat soon became infamous not only for its grey-ish colour and distinctly bitter taste, but its filling nature that is heavy on the stomach."
+ace_cannor_puckmuth_fortress: "Fortress of Puckmuth"
+ace_cannor_puckmuth_fortress_desc: "Where the Dostanesck and the Varinn meet, the impressive fortress of Puckmuth stands. The hill on which it is located is lined with ancient, crumbling stones rumored to stretch back to the depths of time, to fortifications that stood well before even the Castanite Exodus.\n\nThe latest fortress on the site was built following the establishment of the modern state of the Brinkmarches during the Aldresian Crusade, but even it remains influenced by our unique regional style. The unseen, puzzle-piece protrusions that intricately weave the stones of our walls into unyielding patterns make our fortifications especially resilient to spells, cannons, and any other trouble that would come up against them. While some may call it inefficient and overly complicated, the quiet and simple lives of the Brinkmarchers hardly leave us wanting for time to shape them."
 
 form_rohibonia_title: "Form Rohibonia"
 form_rohibonia_desc: "The Lands we inhabit were once roamed by the Rohibonic tribes, migratory peoples who had an affinity to tame horses. Some of us even descend from these tribes. It's time to look back to our roots and revive the proud Rohibonic heritage."
