--- a/3362815204/localisation/ACE_EoA_misc_loc_l_english.yml
+++ b/3362815204/localisation/ACE_EoA_misc_loc_l_english.yml
@@ -1,6 +1,13 @@
 ﻿l_english:
 
 #Events
+ace_flavor_eoa.200.t: "Lodge of the Nameless"
+ace_flavor_eoa.200.desc1: "A shadowy organization called Lodge of the Nameless has over the decades taken prominence in the Tower of Varlosen and turned it into a den for research on the ancient magic of Milcorissia.\nWhile the marquisate of Arannen has tolerated them in exchange for their support, they have recently started to grow restless and demand control of more land on the grounds of furthering their research objectives by exploring Milcorissian labyrinths.\nLocal nobles have refused to grant them access to said land and in response the lodge has started to stir up unrest in the region, gathering under them nobles of alleged Milcori origins as well as hedge-mages.\nWith these new supporters, they have grown bolder and decide to to start an uprising, seeking to take over the the region of the eastern borders and even calling themselves the true heirs of Milcorissia."
+ace_flavor_eoa.200.desc2: "A shadowy organization called Lodge of the Nameless has over the decades taken prominence in the Tower of Varlosen and made it its den for its research on the ancient magic of Milcorissia.\nWhile the marquisate of Arannen has tolerated them in exchange for their support, our authorities have swiftly opted to root them out from the tower and replaced them with proper Magisterium-approved mages.\nThey have resisted our attempt legally and after failing they have disappeared from our sights.\n\nSeemingly, they spent decades gathering under them nobles of Milcori origins as well as Corinite mages that resent our anti-Corinite stance.\nWith these new supporters, they have grown bolder and decide to to start an uprising, seeking to take over the the region of the eastern borders and even calling themselves the true heirs of Milcorissia."
+ace_flavor_eoa.200.a: "Death to the upstarts!"
+ace_flavor_eoa.200.b: "Milcorissia will stand eternal!"
+ace_flavor_eoa.200.c: "The Long War never ends"
+
 eoa_cities.1.abc: "Hidden"
 
 eoa_cities.10.t: "Port Jaher"
@@ -82,8 +89,8 @@ eoa_cities.25.a: "Alright"
 province_interest_alenath: "Alenic Frontier Trade"
 
 eoa_cities.26.t: "Viswall"
-eoa_cities.26.d: "Viswall, a bustling urban center, is renowned for its production of vibrant dyes, not found anywhere else in Cannor. For decades, this colorful city was divided between the rival realms of Gawed and Lorent, each vying for control. Now, with the empire's dominance, Viswall can finally be united under a single banner, ending its long-standing division and ushering in a new era of prosperity."
-eoa_cities.26.a: "Alright"
+eoa_cities.26.d: "Viswall, nicknamed the 'City of Colors', is a bustling urban center and the cultural hub of the Cannorian halflings is renowned for its production of vibrant dyes unique to Cannor, its longstanding political division along the Widderoy river and its unique halfling architecture.\nA tightly packed city split in two, Viswall features some of the lowest ceilings in Cannor and several wooden multi-story buildings that only short folk can enter. A few of the buildings were clearly built to accomodate humans, no doubt commisioned by the historical overlords of Gawed and Lorent. For decades, this colorful city was divided between these two human kingdoms, each vying for control. Now, with the empire's dominance, Visfoot halflings can finally freely visit their friends and family on the other side again, ending its long-standing division and ushering in a new era of prosperity."
+eoa_cities.26.a: "The Empire grows colorful!"
 province_interest_viswall_united: "The City of Colors"
 
 eoa_cities.27.t: "Aelcandar" #todo
@@ -92,8 +99,8 @@ eoa_cities.27.a: "Alright"
 province_interest_aelcandar: "Aelcandar Renovation"
 
 eoa_cities.28.t: "Rubyhold" #todo
-eoa_cities.28.d: "The most notable dwarven hold outside of the Serpentspine on this half of Halann."
-eoa_cities.28.a: "Alright"
+eoa_cities.28.d: "The most notable underground dwarven hold outside of the Serpentspine, Rubyhold has long been politically isolated, their diaspora represented by the surface-dwelling Silverforge dwarves, who have taken up the position as dwarven elector of Anbennar. While the Silver dwarves turned to diplomacy, the Ruby dwarves instead turned inward, digging down into the depths of Halann and forging great crafts, most notably the Ruby Crown of Lorent. This inward focus came to an end in the 15th century, when the Lilac Wars had house Siloriel of Lorent leveraging even its oldest acquaintance, dragging these dwarves into the war and the political frontlines once more. This is followed by the age of Dwarven Reclamation, which led to many Ruby dwarves passing through Cannor to seek glory in the Dwarovar. \nThis newfound interactivity with the surface world has led to its incorporation into the Empire of Anbennar, which has brought forth religious Cannorization, economic integration and a new type of dwarf in Anbennar: The highly skilled Ruby dwarf specialist. Hundreds of dwarven smiths, bankers and jewelers now seek employment in Anbennar, and the Empire's court has not gone unnoticed..."
+eoa_cities.28.a: "We could use their expertise."
 
 eoa_cities.29.t: "Lorentaine" #todo
 eoa_cities.29.d: "Lorentainé is the former capital of the Kingdom of Lorent that sits on the banks of the Bloodwine River. It is known for its high red walls, high culture, courtly intrigue and impeccable streets. "
@@ -110,24 +117,24 @@ eoa_cities.32.d: "Founded by Sormanni tribes, Sornbay resides in estuary of Sorn
 eoa_cities.32.a: "Alright"
 province_interest_sornbay: "City of the Western Wine"
 
-eoa_cities.33.t: "Westport" #todo
-eoa_cities.33.d: "Sitting in a natural harbor of Middanroy Estuary, Westport became a major port for ships heading for Aelantir"
-eoa_cities.33.a: "Alright"
+eoa_cities.33.t: "Westport"
+eoa_cities.33.d: "Nestled just north of the Middanroy Estuary, stretching along both the river and the sea for some miles, Westport is situated at a natural harbour, an estuary and a vital port to reach Aelantir. The city has made full use of its location, earning itself the nickname 'Gateway to the West', and stands as one of the largest trading ports on the Westcoast. The region been getting accustomed to Anbennar's influence for some time now, primarily due to Wesdam's union over Madelaire. Now however, a new age dawns for Westport, as it has been subsumed into the Empire.\n\nThis has affected more than just the relationship between Westport and the Empire however, as thousands of brave settlers are utilising this newfound interconnectivity to make their way to Westport and find passage to Aelantir."
+eoa_cities.33.a: "A good day to be a Derannic captain..."
 province_interest_westport: "Gateway to the West"
 
-eoa_cities.34.t: "Portnamm" #todo
-eoa_cities.34.d: "The city of Portnamm, is a gnomish city on the border of Lencenor and the Dragon Coast. Often called “The City on the Portroy”, as it straddles both sides of the mouth of the Portroy river, Portnamm is a major trading city connecting the Westcoast and rivers running from the Small Country.\n\nPortnamm is one of the two majority gnomish cities outside of the Gnomish Hierarchy. The city is home to the ancient Nimsnoms Theatre, accommodates the Gommo’s Cannorian headquarters in the University of Portnamm, and is home to the largest population of Iochander humans."
-eoa_cities.34.a: "Alright"
+eoa_cities.34.t: "Portnamm"
+eoa_cities.34.d: "The city of Portnamm, is a gnomish city on the border of Lencenor and the Dragon Coast. Often called “The City on the Portroy”, as it straddles both sides of the mouth of the Portroy river, Portnamm is a major trading city connecting the Westcoast and rivers running from the Small Country.\n\nPortnamm stands as one of the only majority gnomish cities that has been able to steer clear of the Gnomish Hierarchy, which has made it compatible with the Empire from a religious perspective. The city is home to the ancient Nimsnoms Theatre, a place renowned for its troupes of entertainers who have oratory and entertainment skills not often seen in the Empire. The city also accommodates the Gommo’s Cannorian headquarters in the University of Portnamm, produces a staggering amount of paper and is home to the largest population of Iochander humans."
+eoa_cities.34.a: "We can use some of this Nimsnoms wit!"
 province_interest_portnamm: "Creek Gnome Comedian Troupes"
 
-eoa_cities.35.t: "Nimscodd" #todo
-eoa_cities.35.d: "Nimscodd was originally a small island city inhabited by Cliff Gnomes, a neglected and relatively unimportant section of ancient Gnomish society. When the Dragonwake occurred and the Kobolds flooded the mainland, the island became home for a large amount of refugees from the Dragon Coast turning Nimscodd from a backyard to the last remnant of ancient Gnomish society. The people of the island are survivors and now under the empire they can flourish just like their Giberdi cousins."
-eoa_cities.35.a: "Alright"
+eoa_cities.35.t: "Nimscodd"
+eoa_cities.35.d: "Nimscodd was originally a small island city inhabited by Cliff Gnomes, a neglected and relatively unimportant section of ancient Gnomish society. When the Dragonwake occurred and the Kobolds flooded the mainland, the island became the refuge of the majority of gnomes refugees from the Dragon Coast, shifting Nimscodd from a backwater isle to an overpopulated capital and last remnant of the ancient Gnomish Hierarchy. The gnomes of the island are survivors, but have also resisted Cannorization for a long time, and The Thought has been a thorn in the side of our efforts to incorporate the Cliff gnomes. Now, with the isle under our wings, they can flourish just like their Imperial cousins in Giberd, and their technological marvels can find their way to our hands."
+eoa_cities.35.a: "We have much to learn..."
 province_interest_nimscodd: "Nimscodd Lens Industry"
 
-eoa_cities.36.t: "Oddansbay" #todo
-eoa_cities.36.d: "Formerly an important city in the Hierarchy and a temporary capital of the Reaver kingdom of Drekiriki, Oddansbay has for long been an underdeveloped and poorly utilized harbor. Under imperial control a city may finally be built to utilize the exceptional geography of the region."
-eoa_cities.36.a: "Alright"
+eoa_cities.36.t: "[177.GetName]"
+eoa_cities.36.d: "The capital of the First Gnomish Hierarchy, the Reaver kingdom of Drekiríki and of the Redscale Kobold Viraxia; The history of [177.GetName] is rich, and is visible in its streets even today. The desirability of this city has doomed it a dozen times. Its Oddanroy estuary, fertile fields and ancient foundations from a gnomish golden age have made it too attractive for conquerors to ignore, and as such the city has long been suffering from the effects of war, exploitation and mismanagement. Now however, under imperial protection the city will undoubtedly reach new heigths and become capable of fully utilising its exceptional geography and ancient gnome foundations."
+eoa_cities.36.a: "The western tip of Cannor is ours."
 province_interest_oddansbay: "Capital of Hierarchy"
 
 eoa_cities.37.t: "All province of interests have been taken!"
@@ -161,25 +168,36 @@ ace_flavor_eoa.104.a: "No more tyrants!"
 ace_flavor_eoa.104.b: "Not our problem"
 
 ace_flavor_eoa.105.t: "The collapse of Wex"
-ace_flavor_eoa.105.d: "Just as the Free Realms repelled and killed Nichmer centuries ago, the forces of the empire have shown courage and valor against the perfidious Wexonards and finally defeated them after years of brutal warfare.\nWith our victory the stolen land under Wex shall be set free and the Wexonards will never threaten the empire again.\nHistory shall remember us as fondly, but right now is time for us to fill the vacuum left by the collpased Wexonard state."
+ace_flavor_eoa.105.d: "Just as the Free Realms repelled and killed Nichmer centuries ago, the forces of the empire have shown courage and valor against the perfidious Wexonards and finally defeated them after years of brutal warfare.\nWith our victory the stolen land under Wex shall be set free and the Wexonards will never threaten the empire again.\nHistory shall remember us as fondly, but right now is time for us to fill the vacuum left by the collapsed Wexonard state."
 ace_flavor_eoa.105.a: "We are the saviour of the empire!"
 
 
-religious_leagues.13.t: "The end of the League Wars"
-religious_leagues.13.d: "The Adeanic alliance was triumphant on the battlefield and the empire will now be controlled by Adeanic emperors and princes!"
-religious_leagues.13.e: "The Corinite accord was triumphant and the empire will now be controlled by Corinite emperors and princes!"
-religious_leagues.13.a: "Ok"
+religious_leagues.5.dc: "Following the rising tensions between the Adeanic and Corinite factions of the Regent Court, Emperor $MONARCH$ has issued the controversial Proclamation of $CAPITAL_CITY$ which states that only Dalcabba rulers which still revere Castellos, the head god of the Court, may be elected emperor. The Adeanic and Corinite Imperial estates have responded vociferously, with the Corinites forming the Corinite Accord, with a joint army and treasury and seeking ties abroad. The emperor, feeling threatened by this new alliance, has declared the formation of the Dalcabba League. The stage is set for religious conflict in the Empire."
 
-religious_leagues.14.t: "The fate of Imperial Adeanics"
-religious_leagues.14.a: "Being the leader of the victorious Corinite Accord, the emperor has the imperial decree of law to wipe out any remaining heretics and followers of the Adeanic faith within the Empire of Anbennar by any means necessary if they so desired."
-religious_leagues.14.d: "They must be stopped immediately."
 
+religious_leagues.19.t: "The fate of Imperial Adeanics"
+religious_leagues.19.a: "Being the leader of the victorious Corinite Accord, the emperor has the imperial decree of law to wipe out any remaining heretics and followers of the Adeanic faith within the Empire of Anbennar by any means necessary if they so desired."
+religious_leagues.19.d: "They must be stopped immediately."
+religious_leagues.100.t: "The end of the League Wars"
+religious_leagues.100.d: "The Adeanic alliance was triumphant on the battlefield and the empire will now be controlled by Adeanic emperors and princes!"
+religious_leagues.100.e: "The Corinite accord was triumphant and the empire will now be controlled by Corinite emperors and princes!"
+religious_leagues.100.a: "Ok"
+
+dalcabba_victory.1.t: "The Dalcabba League is Victorious"
+dalcabba_victory.1.d: "The War of Religion in the Empire has ended in victory for the Dalcabba League. The Emperor has been forced to abdicate and Dalcabba Cult is now the dominant faith in the Empire."
+dalcabba_victory.1.a: "A black day!"
+hre_dominant_dalcabba: "Dalcabba Empire"
+hre_dominant_dalcabba_desc: "The Dalcabba faith is the official religion of the Empire of Anbennar. Following this faith grants our nation a certain moral legitimacy."
+hre_dominant_jadd: "Jadd Empire"
+hre_dominant_jadd_desc: "The Jadd faith is the official religion of the Empire of Anbennar. Following this faith grants our nation a certain moral legitimacy."
+
+ace_remove_centers_tooltip: "Remove all §YHeretic§! Center of Reformations in the empire"
+ace_removed_centers: "Removed §YHeretic§! Centers of Reformation"
 
 moon_party_diplo_tooltip: "\nGain §G50§! Opinion with §YMoon Party§! members for §Y50 years§!\nGain §R-50§! Opinion with §YRose Party§! members for §Y50 years§!\n"
 rose_party_diplo_tooltip: "\nGain §G50§! Opinion with §YRose Party§! members for §Y50 years§!\nGain §R-50§! Opinion with §YMoon Party§! members for §Y50 years§!"
-ACE_lost_league_war_tooltip: "As the losers of the League War, we will be unable to convert any province of the winning faith in Cannor for 30"
-ACE_remove_religious_zeal_tooltip: "All provinces not of the imperial religion will lose §YReligious Zeal§!"
-
+ACE_lost_league_war_tooltip: "As the losers of the League War, we will be unable to convert any province of the winning faith in Cannor for 30 Years"
+ACE_remove_religious_zeal_tooltip: "All provinces not of the §YImperial Religion§! will lose §YReligious Zeal§! and those of the §YImperial Religion§! will gain §YReligious Zeal§!\n"
 
 
 #Flag
@@ -192,9 +210,10 @@ lilac_wars_rose_party: "Rose Party member"
 wex_imperial_sanction: "Imperial Sanction"
 wex_imperial_support: "Imperial Support"
 destroyer_of_wex: "Vanquisher of Wex"
-wexonard_primacy_defended: "Primary Defended"
+wexonard_hegemony_defended: "Hegemony Defended"
 eoa_religious_league_loser: "Lost Religious War"
-adeanic_center_of_reformation: "Adeanic Center of Counter-Reformation"
+adeanic_center_of_reformation: "Center of Counter-Reformation"
+dalcabba_center_of_reformation: "Center of Revelation"
 eoa_all_cities: "Empire of Cities"
 eoa_all_cities_desc: "Through generations of diplomatic and militarily expansion, Anbennar now controls all the important centers of culture, trade or industry in the continent of Cannor"
 
@@ -209,16 +228,16 @@ ace_moon_party_enemy: "Former Rose Party Enemy"
 
 
 #Decision
-check_provinces_of_interest_title: "Imperial provinces of interest"
+check_provinces_of_interest_title: "Imperial Provinces of Interest"
 check_provinces_of_interest_desc: "Add highlighted provinces to the empire"
 
-plan_wex_dismantlement_title: "Conspire to dismantle Wex"
+plan_wex_dismantlement_title: "Conspire to Dismantle Wex"
 plan_wex_dismantlement_desc: "With Wex losing the imperial title and with our growing alliance network, we will seek to put down the Wexonards and free their oppressed subjects"
 
 
 
 #Province Group
-eoa_provinces_of_interest: "Imperial provinces of interest"
+eoa_provinces_of_interest: "Imperial Provinces of Interest"
 
 
 
@@ -246,7 +265,7 @@ CURTAIL_WEX_WAR: "The Curtailing of Wex"
 PEACE_po_curtail_wex: "§YCurtail Wex§!"
 PEACE_po_dismantle_wex_coalition: "§YDestroy the coalition§!"
 
-po_curtail_wex: "Dismantle Anbennar"
+po_curtail_wex: "Dismantle Wex"
 po_curtail_wex_desc: "The Wexonards shall be kicked out Damerian and Arannese land and relegated to their homeland!"
 po_dismantle_wex_coalition_wex: "Dismantle the coalition"
 po_dismantle_wex_coalition_desc: "The treacherous princes will be punished accordingly, accepting our primacy in the region!"
@@ -256,6 +275,7 @@ po_dismantle_wex_coalition_desc: "The treacherous princes will be punished accor
 #Disaster
 incident_curtail_wex: "Anti-Wexonard Coalition"
 incident_curtail_wex_member_alert: "Various princes in the empire accuse the late Lothane síl Wex of having abused the position of emperor and of having used imperial levies and funds to personally enrich his Grand Duchy and achieve his own goals.\nNow that he has passed away they seek to join together and attack the Grand Duchy to restore the balance and peace of the empire."
+incident_curtail_wex_emperor_alert: "Various princes in the empire accuse the late Lothane síl Wex of having abused the position of emperor and of having used imperial levies and funds to personally enrich his Grand Duchy and achieve his own goals.\nNow that he has passed away they seek to join together and attack the Grand Duchy to restore the balance and peace of the empire."
 
 
 
