--- a/3362815204/localisation/ACE_bookmarks_l_french.yml
+++ b/3362815204/localisation/ACE_bookmarks_l_french.yml
@@ -1,15 +1,22 @@
 ﻿l_french:
-
 ACE_CANNOR_NAME: "£bookmark_ACE_cannor£"
-ACE_CANNOR_DESC: "Cannor                                                                                                £icon_new_player£ §GRecommandé pour les joueurs découvrant l'univers.§! \n\n£bookmark_race_human££bookmark_race_elven££bookmark_race_halfling££bookmark_race_dwarven££bookmark_race_gnomish££bookmark_race_kobold££bookmark_race_troll££bookmark_race_gnollish£\n    £bookmark_separator£\nGouvernez comme Grand-Duc de @A30 Wex\nApportez l'ordre au Nord en tant que @Z88 Vængheim. Pillez à travers le monde en tant que @A05 Reveria remaniée\nDominez le commerce de Divenhal et défendez la foi adéanique en tant que @A11 Pearlsedge. Restaurez la gloire trétunic en tant que @Z05 Tretun.\nPillez Cannor en tant que @AC7 Kryzzar. Imposez l'ordre sous la dictature de @A92 Leslinpár"
+ACE_CANNOR_DESC: "Cannor                                                                                                £icon_new_player£ §GRecommandé pour les joueurs nouveaux dans cet univers.§! \n\n£bookmark_race_human££bookmark_race_elven££bookmark_race_halfling££bookmark_race_dwarven££bookmark_race_gnomish££bookmark_race_kobold££bookmark_race_troll££bookmark_race_gnollish£\n    £bookmark_separator£
+Règne en tant que Grand-Duc de @A30 Wex\nRétablis l'ordre dans le Nord en incarnant @Z88 Vængheim. Pille le monde en tant que @A05 Reveria révisitée\nDomine le commerce de la Divenhal et défends la foi adéanique en jouant @A11 Pearlsedge. Restaure la gloire trétunienne avec @Z05 Tretun.\nPille Cannor avec @AC7 Kryzzar. Impose l'ordre en tant que dictature de @A92 Leslinpár"
+
+ACE_CANNOR_NAME2: "£bookmark_ACE_Borders£"
+ACE_CANNOR_DESC2: "Les Marches                                                                                                \n@A72 Domine les marches et forme l'empire absolutiste de @AD6 §Yl'Empire de Vivin§! ou @Z06 Protège les marches et découvre les secrets de la folie\n@A57 Crée une seconde patrie pour les Roilsardi dans les marches. @A48 Deviens le véritable royaume wexonard et conquiers les terres de Kheterata. @A34 Reste fidèle au parti lunaire en tant que seuls Wexonards et prends ta revanche sur les traîtres\n@AB2 Forme la république marchande jadd en tant que §YJaherkel§!, en commençant par @A29 §YBusilar§!\n@Z02 @Z04 Unis les cités wexonardes et forme la @AD8 §YLigue Wexonarde Libre§!\n@A56 Redécouvre tes racines milcoriennes et crée un royaume où la noblesse règne en maître\n@A33 §YVerne§! Choisis ton destin entre République ou Monarchie et domine Cannor avec des vouvres."
 
 ACE_DWAROVAR_NAME: "£bookmark_serpentspine£"
-ACE_DWAROVAR_DESC: "Échine-du-Serpent\n\nUnissez les @AC5 Kobolds Écaille-de-Magma sous une stratocratie unie et montrez aux Nains, à Bulwar et à Kheterata la puissance de l'esprit draconique combiné à l'industrie !\n\nRestaurez le siège de la Haute Forteresse des Nains d'@I01 Amldihr et décidez de son avenir politique ! Créé à l'origine par Larrius King"
+ACE_DWAROVAR_DESC: "Échine-du-Serpent\n\nUnis les @AC5 Kobolds Écailles-de-Magma sous une stratocratie unie et montre aux Nains, à Bulwar et à Kheterata la puissance de l'esprit draconique allié à l'industrie !\n\nRestaure le siège de la Haute Forteresse des Nains de @I01 Amldihr et décide de son avenir politique ! À l'origine créé par Larrius King"
 
 ACE_BULWAR_NAME: "£bookmark_bulwar£"
-ACE_BULWAR_DESC: "Bulwar\n\nMenez la foi jadd à la victoire sous les ailes bienveillantes et protectrices du @F49 Matriarcat d'Elaienna ! Créé à l'origine par Larrius King"
+ACE_BULWAR_DESC: "Bulwar\n\nMène la foi jadd à la victoire sous les ailes protectrices du @F49 Matriarcat d'Elaienna ! À l'origine créé par Larrius King"
 
-DLC_missions_yes_ACE_TOOLTIP_INSTANT: "§PArbre de Missions ACE§!"
-missions_yes_ACE_desc: "Ce pays possède un arbre de missions ACE"
-LANDING_missions_yes_ACE_TEXT: "Ce pays possède un arbre de missions ACE."
+ACE_SOUTH_AELANTIR_NAME: "£bookmark_south_aelantir£"
+ACE_SOUTH_AELANTIR_DESC: "Aelantir du Sud\n\n£bookmark_race_ruinborn££bookmark_race_human£\n    £bookmark_separator£
+Mène les survivants animés par la soif d'aventure de l'expédition écumeuse du Xe siècle vers Aelantir en incarnant @AD5 Hallfredhavn."
+
+DLC_missions_yes_ACE_TOOLTIP_INSTANT: "§PARBRE ACE d'objectifs§!"
+missions_yes_ACE_desc: "Ce pays dispose d'un arbre de missions ACE"
+LANDING_missions_yes_ACE_TEXT: "Ce pays dispose d'un arbre de missions ACE."
 LANDING_missions_yes_ACE_FLAVOR_TEXT: ""
