--- a/3362815204/localisation/ACE_misc_loc_l_french.yml
+++ b/3362815204/localisation/ACE_misc_loc_l_french.yml
@@ -1,3 +1,8 @@
 ﻿l_french:
 
-has_trade_building_trigger_short_tt: "Possède un bâtiment de §YCommerce§!."
+has_trade_building_trigger_short_tt: "Possède un bâtiment §YCommercial§!"
+mission_alternatively_ace_tt:1 "§TAlternativement :§!"
+ace_province_is_or_accepts_culture_tooltip: "Est la culture principale ou acceptée du propriétaire"
+no_devastation_or_unrest_trigger_tooltip: "Dévastation et Agitation toutes deux inférieures à §Y1§!"
+no_devastation_separatism_unrest_trigger_tooltip: "Dévastation, Séparatisme et Agitation tous inférieurs à §Y1§!"
+vampire_actions_title: "Actions de Vampire"
