--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -29,7 +29,8 @@ custom_celmador_nimscodd_issue.2.d:0 "With Oddcodd peacefully transferred to Cel
 custom_celmador_nimscodd_issue.2.a:0 "Invest in the island and the Storm Isles."
 custom_celmador_nimscodd_issue.3.t:0 "They refuse its war time"
 custom_celmador_nimscodd_issue.3.d:0 "Nimscodd Refuse our proposal! We will take this Island by force!"
-custom_celmador_nimscodd_issue.3.a:0 "WAAAAAAAAR"
+custom_celmador_nimscodd_issue.3.a:0 "WAAAAAAAAR (Warning it will call All allies of Nimscodd !)"
+custom_celmador_nimscodd_issue.3.b:0 "We are not ready for war yet"
 
 select_edict_for_all_province_title:0 "Select Edict for All Provinces"
 select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country. Nothing is more efficient than enacting a decree to bypass the congress."
@@ -63,7 +64,55 @@ scry_on_everyone_tooltip:0 "Lift Fog of war during 120 months"
 
 advisor_flags_info_title:0 "Advisor Events Status"
 advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
- 
+
+
+tm_admtech_02:0 "Bonus admin tech 2"
+tm_admtech_03:0 "Bonus admin tech 3"
+tm_admtech_04:0 "Bonus admin tech 4"
+tm_admtech_05:0 "Bonus admin tech 5"
+tm_admtech_06:0 "Bonus admin tech 6"
+tm_admtech_07:0 "Bonus admin tech 7"
+tm_admtech_08:0 "Bonus admin tech 8"
+tm_admtech_09:0 "Bonus admin tech 9"
+tm_admtech_10:0 "Bonus admin tech 10"
+tm_admtech_11:0 "Bonus admin tech 11"
+tm_admtech_12:0 "Bonus admin tech 12"
+tm_admtech_13:0 "Bonus admin tech 13"
+tm_admtech_14:0 "Bonus admin tech 14"
+tm_admtech_15:0 "Bonus admin tech 15"
+tm_admtech_16:0 "Bonus admin tech 16"
+tm_admtech_17:0 "Bonus admin tech 17"
+tm_admtech_18:0 "Bonus admin tech 18"
+tm_admtech_19:0 "Bonus admin tech 19"
+tm_admtech_20:0 "Bonus admin tech 20"
+tm_admtech_21:0 "Bonus admin tech 21"
+tm_admtech_22:0 "Bonus admin tech 22"
+tm_admtech_23:0 "Bonus admin tech 23"
+tm_admtech_24:0 "Bonus admin tech 24"
+tm_admtech_25:0 "Bonus admin tech 25"
+tm_admtech_26:0 "Bonus admin tech 26"
+tm_admtech_27:0 "Bonus admin tech 27"
+tm_admtech_28:0 "Bonus admin tech 28"
+tm_admtech_29:0 "Bonus admin tech 29"
+tm_admtech_30:0 "Bonus admin tech 30"
+tm_admtech_31:0 "Bonus admin tech 31"
+tm_admtech_32:0 "Bonus admin tech 32"
+
+tm_diptech_02:0 "Bonus dip tech 2"
+tm_diptech_03:0 "Bonus dip tech 3"
+tm_diptech_04:0 "Bonus dip tech 4"
+tm_diptech_05:0 "Bonus dip tech 6"
+tm_diptech_07:0 "Bonus dip tech 7"
+tm_diptech_08:0 "Bonus dip tech 8"
+tm_diptech_09:0 "Bonus dip tech 9"
+tm_diptech_10:0 "Bonus dip tech 10"
+tm_diptech_11:0 "Bonus dip tech 11"
+tm_diptech_12:0 "Bonus dip tech 12"
+tm_diptech_13:0 "Bonus dip tech 13"
+tm_diptech_14:0 "Bonus dip tech 14"
+tm_diptech_15:0 "Bonus dip tech 15"
+
+
  # Base text for description
  advisor_flags_info_desc_intro:0 "§YTriggered Advisor Events:§!\n\n"
  
