--- a/3362815204/localisation/1me_text_l_french.yml
+++ b/3362815204/localisation/1me_text_l_french.yml
@@ -20,6 +20,17 @@ custom_institution_growth_event.1.b:0 "Investir des ressources dans la croissanc
 custom_institution_growth_event.1.c:0 "Je suis un boss, je vais développer l'institution moi-même."
 institution_growth_boost_modifier:0 "Boost de croissance d'institution"
 institution_growth_boost_modifier2:0 "Boost de croissance d'institution 2"
+custom_celmador_nimscodd_issue.1.t:0 "Le diléme de Oddcodd"
+custom_celmador_nimscodd_issue.1.d:0 "L'île d'Oddcodd a longtemps été un sujet de discorde entre Nimscodd et Celmador. Celmador exige désormais le contrôle de l'île, offrant en échange de l'or et une aide au développement. Nos conseillers sont divisés : certains estiment que la paix et la prospérité valent mieux qu'un rocher stérile, tandis que d'autres insistent pour que nous ne cédions pas un pouce du sol de Nimscodd."
+custom_celmador_nimscodd_issue.1.a:0 "Accepter l'offre de Celmador et céder Oddcodd."
+custom_celmador_nimscodd_issue.1.b:0 "Aux armes ! Nous défendrons Oddcodd !"
+custom_celmador_nimscodd_issue.2.t:0 "Oddcodd sécurisé"
+custom_celmador_nimscodd_issue.2.d:0 "Avec le transfert pacifique d'Oddcodd à Celmador, nos marchands et colons se précipitent pour intégrer l'île à nos réseaux commerciaux. Les communautés locales se transforment tandis que de nouvelles opportunités émergent à travers les Îles de la Tempête."
+custom_celmador_nimscodd_issue.2.a:0 "Investir dans l'ile et les Îles de la Tempête.."
+custom_celmador_nimscodd_issue.3.t:0 "Ils refusent — c'est la guerre !"
+custom_celmador_nimscodd_issue.3.d:0 "Nimscodd a rejeté notre proposition ! Nous prendrons cette île par la force !"
+custom_celmador_nimscodd_issue.3.a:0 "GUERRE !(Attention cela appellera tous les alliés de Nimscodd)"
+custom_celmador_nimscodd_issue.3.b:0 "Nous ne sommes pas encore prêts pour la guerre."
 
 select_edict_for_all_province_title:0 "Sélectionner un Édit pour Toutes les Provinces"
 select_edict_for_all_province_desc:0 "Cette décision vous permettra de sélectionner un édit à appliquer à toutes les provinces de votre pays. Rien n'est plus efficace que de promulguer un décret pour contourner le congrès."
@@ -53,6 +64,52 @@ scry_on_everyone_tooltip:0 "Lever le brouillard de guerre pendant 120 mois"
 
 advisor_flags_info_title:0 "Statut des Événements de Conseillers"
 advisor_flags_info_desc:0 "Cette option affiche quels événements de conseillers ont été déclenchés dans votre pays."
+
+tm_admtech_02:0 "Bonus admin tech 2"
+tm_admtech_03:0 "Bonus admin tech 3"
+tm_admtech_04:0 "Bonus admin tech 4"
+tm_admtech_05:0 "Bonus admin tech 5"
+tm_admtech_06:0 "Bonus admin tech 6"
+tm_admtech_07:0 "Bonus admin tech 7"
+tm_admtech_08:0 "Bonus admin tech 8"
+tm_admtech_09:0 "Bonus admin tech 9"
+tm_admtech_10:0 "Bonus admin tech 10"
+tm_admtech_11:0 "Bonus admin tech 11"
+tm_admtech_12:0 "Bonus admin tech 12"
+tm_admtech_13:0 "Bonus admin tech 13"
+tm_admtech_14:0 "Bonus admin tech 14"
+tm_admtech_15:0 "Bonus admin tech 15"
+tm_admtech_16:0 "Bonus admin tech 16"
+tm_admtech_17:0 "Bonus admin tech 17"
+tm_admtech_18:0 "Bonus admin tech 18"
+tm_admtech_19:0 "Bonus admin tech 19"
+tm_admtech_20:0 "Bonus admin tech 20"
+tm_admtech_21:0 "Bonus admin tech 21"
+tm_admtech_22:0 "Bonus admin tech 22"
+tm_admtech_23:0 "Bonus admin tech 23"
+tm_admtech_24:0 "Bonus admin tech 24"
+tm_admtech_25:0 "Bonus admin tech 25"
+tm_admtech_26:0 "Bonus admin tech 26"
+tm_admtech_27:0 "Bonus admin tech 27"
+tm_admtech_28:0 "Bonus admin tech 28"
+tm_admtech_29:0 "Bonus admin tech 29"
+tm_admtech_30:0 "Bonus admin tech 30"
+tm_admtech_31:0 "Bonus admin tech 31"
+tm_admtech_32:0 "Bonus admin tech 32"
+
+tm_diptech_02:0 "Bonus dip tech 2"
+tm_diptech_03:0 "Bonus dip tech 3"
+tm_diptech_04:0 "Bonus dip tech 4"
+tm_diptech_05:0 "Bonus dip tech 6"
+tm_diptech_07:0 "Bonus dip tech 7"
+tm_diptech_08:0 "Bonus dip tech 8"
+tm_diptech_09:0 "Bonus dip tech 9"
+tm_diptech_10:0 "Bonus dip tech 10"
+tm_diptech_11:0 "Bonus dip tech 11"
+tm_diptech_12:0 "Bonus dip tech 12"
+tm_diptech_13:0 "Bonus dip tech 13"
+tm_diptech_14:0 "Bonus dip tech 14"
+tm_diptech_15:0 "Bonus dip tech 15"
  
  # Base text for description
  advisor_flags_info_desc_intro:0 "§YÉvénements de Conseillers Déclenchés :§!\n\n"
